feat: implement the methods remove_at_end and remove_at_pos
remove the item at the end of the doubly linked list
remove the item at the position of the doubly linked list

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3382,7 +3382,39 @@
     "\n",
     "    # remove item at the end\n",
     "    def remove_at_end(self):\n",
-    "        pass\n",
+    "        current = self.head\n",
+    "        while current.getNext() != None:\n",
+    "            current = current.getNext()\n",
+    "        current.getPrevious().setNext(None)\n",
+    "        self.tail = current.getPrevious()\n",
+    "        self.number_of_elts -= 1\n",
+    "\n",
+    "    # remove item at the pos\n",
+    "    def remove_at_pos(self, pos):\n",
+    "        current = self.head\n",
+    "        found = False\n",
+    "        counter = 0\n",
+    "        while current != None and not found:\n",
+    "            if 0 == pos:\n",
+    "               found = True \n",
+    "               current = current.getNext()\n",
+    "               current.setPrevious(None)\n",
+    "               self.head = current\n",
+    "               self.number_of_elts -= 1\n",
+    "            elif self.number_of_elts - 1 == pos and current.getNext() == None:\n",
+    "                found = True\n",
+    "                current.getPrevious().setNext(None)\n",
+    "                self.tail = current.getPrevious()\n",
+    "                self.number_of_elts -= 1\n",
+    "            elif counter == pos:\n",
+    "                found = True\n",
+    "                current.getPrevious().setNext(current.getNext()) \n",
+    "                current.getNext().setPrevious(current.getPrevious())\n",
+    "                self.number_of_elts -= 1\n",
+    "            else:\n",
+    "                current = current.getNext()\n",
+    "                counter += 1\n",
+    "        \n",
     "\n",
     "    # remove item at the pos\n",
     "    def remove_at_pos(self):\n",
