feat: implement the method remove_at_beg
remove the item at the beginning of the doubly linked list

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3417,8 +3417,12 @@
     "        \n",
     "\n",
     "    # remove item at the pos\n",
-    "    def remove_at_pos(self):\n",
-    "        pass\n",
+    "    def remove_at_beg(self):\n",
+    "        current = self.head\n",
+    "        current = current.getNext()\n",
+    "        current.setPrevious(None)\n",
+    "        self.head = current\n",
+    "        self.number_of_elts -= 1\n",
     "    \n",
     "    def __str__(self):\n",
     "        items = \"[\"\n",
