fix: use the variable separator

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3432,7 +3432,7 @@
     "            item = current.getData()\n",
     "            items += f\"{item}\"\n",
     "            if None != current.getNext():\n",
-    "                items += \", \" \n",
+    "                items += separator\n",
     "            current = current.getNext()\n",
     "        items += \"]\"\n",
     "        return items\n",
