test: add different testcases for the new methods for removing an item

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3466,6 +3466,30 @@
     "data.update_current_new_item(1, 21)\n",
     "data.update_current_new_item(8, 33)\n",
     "print(data)\n",
+    "print(f\"numbers of elements = {data.number_of_elts}\")\n",
+    "\n",
+    "data.remove_at_end()\n",
+    "print(data)\n",
+    "print(f\"numbers of elements = {data.number_of_elts}\")\n",
+    "\n",
+    "data.remove_at_beg()\n",
+    "print(data)\n",
+    "print(f\"numbers of elements = {data.number_of_elts}\")\n",
+    "\n",
+    "data.remove_at_pos(2)\n",
+    "print(data)\n",
+    "data.remove_at_pos(0)\n",
+    "print(data)\n",
+    "data.remove_at_pos(5)\n",
+    "print(data)\n",
+    "print(f\"numbers of elements = {data.number_of_elts}\")\n",
+    "\n",
+    "data.remove_item(21)\n",
+    "print(data)\n",
+    "data.remove_item(9)\n",
+    "print(data)\n",
+    "data.remove_item(6)\n",
+    "print(data)\n",
     "print(f\"numbers of elements = {data.number_of_elts}\")"
    ]
   },
