chore: add the output for the test

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3245,7 +3245,19 @@
       "[4, 3, 9, 11, 10, 1, 5, 6, 7, 8]\n",
       "numbers of elements = 10\n",
       "[4, 3, 9, 11, 10, 21, 5, 6, 7, 33]\n",
-      "numbers of elements = 10\n"
+      "numbers of elements = 10\n",
+      "[4, 3, 9, 11, 10, 21, 5, 6, 7]\n",
+      "numbers of elements = 9\n",
+      "[3, 9, 11, 10, 21, 5, 6, 7]\n",
+      "numbers of elements = 8\n",
+      "[3, 9, 10, 21, 5, 6, 7]\n",
+      "[9, 10, 21, 5, 6, 7]\n",
+      "[9, 10, 21, 5, 6]\n",
+      "numbers of elements = 5\n",
+      "[9, 10, 5, 6]\n",
+      "[10, 5, 6]\n",
+      "[10, 5]\n",
+      "numbers of elements = 2\n"
      ]
     }
    ],
