feat: add queue class and with the methods enqueue and dequeue

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3515,7 +3515,22 @@
     "\"\"\"\n",
     "28. Create an implementation of a queue that would have an average performance of O(1) \n",
     "for enqueue and dequeue operations.\n",
-    "\"\"\""
+    "\n",
+    "class queue:\n",
+    "    def __init__(self):\n",
+    "        # For entries\n",
+    "        self.stack_in = []\n",
+    "        # For output\n",
+    "        self.stack_out = []\n",
+    "    \n",
+    "    def enqueue(self, item):\n",
+    "        return self.stack_in.append(item)\n",
+    "    \n",
+    "    def dequeue(self):\n",
+    "        if len(self.stack_out) == 0:\n",
+    "            while self.stack_in:\n",
+    "                self.stack_out.append(self.stack_in.pop())\n",
+    "        return self.stack_out.pop()\n",
    ]
   },
   {
