feat: add the method peek

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3531,6 +3531,9 @@
     "            while self.stack_in:\n",
     "                self.stack_out.append(self.stack_in.pop())\n",
     "        return self.stack_out.pop()\n",
+    "    def peek(self):\n",
+    "        return self.stack_out[-1]\n",
+    "\n",
    ]
   },
   {
