feat: add the is_empty

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3534,6 +3534,9 @@
     "    def peek(self):\n",
     "        return self.stack_out[-1]\n",
     "\n",
+    "    def is_empty(self):\n",
+    "        return len(self.stack_in) == 0 and len(self.stack_out) == 0\n",
+    "    \n",
    ]
   },
   {
