feat: add the double underscore methods

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3537,6 +3537,17 @@
     "    def is_empty(self):\n",
     "        return len(self.stack_in) == 0 and len(self.stack_out) == 0\n",
     "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.stack_in) + len(self.stack_out)\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        if len(self.stack_in) != 0 and len(self.stack_out) == 0:\n",
+    "            return f\"{self.stack_in}\"\n",
+    "        elif len(self.stack_out) != 0 and len(self.stack_in) == 0:\n",
+    "            return f\"{self.stack_out}\"\n",
+    "        else:\n",
+    "            return f\"{self.stack_in + self.stack_out}\"\n",
+    "\n",
    ]
   },
   {
