test: add testcases for queue

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3548,6 +3548,29 @@
     "        else:\n",
     "            return f\"{self.stack_in + self.stack_out}\"\n",
     "\n",
+    "\n",
+    "queue_list = queue()\n",
+    "\n",
+    "for i in range(10):\n",
+    "    queue_list.enqueue(i)\n",
+    "\n",
+    "print(queue_list)\n",
+    "\n",
+    "queue_list.dequeue()\n",
+    "print(queue_list)\n",
+    "\n",
+    "queue_list.enqueue(12)\n",
+    "queue_list.enqueue(13)\n",
+    "queue_list.enqueue(14)\n",
+    "queue_list.enqueue(15)\n",
+    "queue_list.enqueue(16)\n",
+    "print(queue_list)\n",
+    "queue_list.dequeue()\n",
+    "queue_list.dequeue()\n",
+    "queue_list.dequeue()\n",
+    "queue_list.dequeue()\n",
+    "queue_list.dequeue()\n",
+    "print(queue_list)"
    ]
   },
   {
