chore: draw a triangle as a basis

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -124,20 +124,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "Terminator",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTerminator\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 19\u001b[0m\n\u001b[1;32m     17\u001b[0m wn \u001b[38;5;241m=\u001b[39m turtle\u001b[38;5;241m.\u001b[39mScreen()\n\u001b[1;32m     18\u001b[0m wn\u001b[38;5;241m.\u001b[39msetup(width\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1000\u001b[39m, height\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m500\u001b[39m)\n\u001b[0;32m---> 19\u001b[0m \u001b[43mturtle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mspeed\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     20\u001b[0m turtle\u001b[38;5;241m.\u001b[39mpendown()\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m3\u001b[39m):\n",
-      "File \u001b[0;32m<string>:5\u001b[0m, in \u001b[0;36mspeed\u001b[0;34m(speed)\u001b[0m\n",
-      "\u001b[0;31mTerminator\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "4. Find or invent an algorithm for drawing a fractal mountain. \n",
@@ -145,29 +132,40 @@
     "\"\"\"\n",
     "# TODO: add working as intended\n",
     "import turtle\n",
-    "\n",
-    "def koch_fract(turtle, divis, size):\n",
-    "   if(divis == 0):\n",
-    "      turtle.forward(size)\n",
-    "   else:\n",
-    "      for angle in [60, -120, 60, 0]:\n",
-    "         koch_fract(turtle, divis - 1, size / 3)               \n",
-    "         turtle.left(angle)\n",
-    "\n",
+    "# def koch_fract(turtle, divis, size):\n",
+    "#    if(divis == 0):\n",
+    "#       turtle.forward(size)\n",
+    "#    else: c\n",
+    "#       for angle in [60, -120, 60, 0]:\n",
+    "#          koch_fract(turtle, divis - 1, size / 3)               \n",
+    "#          turtle.left(angle)\n",
     "divis = 10 # any number of divisions, the larger the number, the more detailed the diagram\n",
     "size = 2000 # any length\n",
     "wn = turtle.Screen()\n",
-    "wn.setup(width=1000, height=500)\n",
-    "turtle.speed(100)\n",
-    "turtle.pendown()\n",
-    "for i in range(0, 3):\n",
-    "   koch_fract(turtle, divis, size)\n",
-    "   turtle.left(-120)"
+    "wn.setup(width=1000, height=1000)\n",
+    "t = turtle.Turtle()\n",
+    "t.left(60)\n",
+    "t.forward(200)\n",
+    "t.left(-120)\n",
+    "t.forward(200)\n",
+    "t.left(-120)\n",
+    "t.forward(200)\n",
+    "#for i in range(0, 3):\n",
+    "#   koch_fract(t, divis, size)\n",
+    "#   t.left(-120)\n",
+    "wn.exitonclick()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4081,14 +4079,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
+     "ename": "NameError",
+     "evalue": "name 'mobilechelonian' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 9\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;124;03m15. This problem is called the string edit distance problem, and is quite useful in many areas of research.\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124;03mSuppose that you want to transform the word “algorithm” into the word “alligator.” \u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;124;03mUse dynamic programming techniques to develop an algorithm that gives you the smallest edit distance between any two words.\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[43mmobilechelonian\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'mobilechelonian' is not defined"
      ]
     }
    ],
@@ -4099,7 +4101,9 @@
     "For each letter you can either copy the letter from one word to another at a cost of 5, you can delete a letter at cost of 20, or insert a letter at a cost of 20.\n",
     "The total cost to transform one word into another is used by spell check programs to provide suggestions for words that are close to one another.\n",
     "Use dynamic programming techniques to develop an algorithm that gives you the smallest edit distance between any two words.\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "mobilechelonian"
    ]
   }
  ],
