feat: add the solution for the exercises 4

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -124,7 +124,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Terminator",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTerminator\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 45\u001b[0m\n\u001b[1;32m     42\u001b[0m mountain(start_point, end_point, initial_roughness)\n\u001b[1;32m     44\u001b[0m turtle\u001b[38;5;241m.\u001b[39mdone()\n\u001b[0;32m---> 45\u001b[0m \u001b[43mturtle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexitonclick\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m<string>:5\u001b[0m, in \u001b[0;36mexitonclick\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mTerminator\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "4. Find or invent an algorithm for drawing a fractal mountain. \n",
@@ -132,28 +145,45 @@
     "\"\"\"\n",
     "# TODO: add working as intended\n",
     "import turtle\n",
-    "# def koch_fract(turtle, divis, size):\n",
-    "#    if(divis == 0):\n",
-    "#       turtle.forward(size)\n",
-    "#    else: c\n",
-    "#       for angle in [60, -120, 60, 0]:\n",
-    "#          koch_fract(turtle, divis - 1, size / 3)               \n",
-    "#          turtle.left(angle)\n",
-    "divis = 10 # any number of divisions, the larger the number, the more detailed the diagram\n",
-    "size = 2000 # any length\n",
-    "wn = turtle.Screen()\n",
-    "wn.setup(width=1000, height=1000)\n",
-    "t = turtle.Turtle()\n",
-    "t.left(60)\n",
-    "t.forward(200)\n",
-    "t.left(-120)\n",
-    "t.forward(200)\n",
-    "t.left(-120)\n",
-    "t.forward(200)\n",
-    "#for i in range(0, 3):\n",
-    "#   koch_fract(t, divis, size)\n",
-    "#   t.left(-120)\n",
-    "wn.exitonclick()"
+    "\n",
+    "import turtle\n",
+    "import random\n",
+    "\n",
+    "def mountain(P1, P2, roughness):\n",
+    "    # Base case: if segment is too small, draw a line\n",
+    "    if (P2[0] - P1[0])**2 + (P2[1] - P1[1])**2 < 1:\n",
+    "        turtle.goto(P2)\n",
+    "        return\n",
+    "\n",
+    "    # Calculate midpoint\n",
+    "    mid_x = (P1[0] + P2[0]) / 2\n",
+    "    mid_y = (P1[1] + P2[1]) / 2\n",
+    "\n",
+    "    # Apply random vertical displacement\n",
+    "    displacement = random.uniform(-roughness, roughness)\n",
+    "    mid_y += displacement\n",
+    "\n",
+    "    P3 = (mid_x, mid_y)\n",
+    "\n",
+    "    # Recursive calls for the two new segments\n",
+    "    mountain(P1, P3, roughness * 0.5)  # Reduce roughness for next level\n",
+    "    mountain(P3, P2, roughness * 0.5)\n",
+    "\n",
+    "# Setup Turtle\n",
+    "turtle.speed(0) # Fastest drawing speed\n",
+    "turtle.penup()\n",
+    "turtle.goto(-500, 0) # Starting point of the mountain range\n",
+    "turtle.pendown()\n",
+    "\n",
+    "# Initial call to draw the mountain\n",
+    "start_point = (-400, 0)\n",
+    "end_point = (400, 0)\n",
+    "initial_roughness = 300 # Adjust for desired level of detail\n",
+    "\n",
+    "mountain(start_point, end_point, initial_roughness)\n",
+    "\n",
+    "turtle.done()\n",
+    "turtle.exitonclick()"
    ]
   },
   {
@@ -4079,7 +4109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4102,8 +4132,34 @@
     "The total cost to transform one word into another is used by spell check programs to provide suggestions for words that are close to one another.\n",
     "Use dynamic programming techniques to develop an algorithm that gives you the smallest edit distance between any two words.\n",
     "\"\"\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.145393727484457\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
     "\n",
-    "mobilechelonian"
+    "d = random.uniform(-5, 5)\n",
+    "print(d)"
    ]
   }
  ],
