chore: explore the mountain draw

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -126,15 +126,11 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "Terminator",
-     "evalue": "",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (2299520625.py, line 14)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTerminator\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 45\u001b[0m\n\u001b[1;32m     42\u001b[0m mountain(start_point, end_point, initial_roughness)\n\u001b[1;32m     44\u001b[0m turtle\u001b[38;5;241m.\u001b[39mdone()\n\u001b[0;32m---> 45\u001b[0m \u001b[43mturtle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexitonclick\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m<string>:5\u001b[0m, in \u001b[0;36mexitonclick\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mTerminator\u001b[0m: "
+      "\u001b[0;36m  Cell \u001b[0;32mIn[4], line 14\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f{(P2[0] - P1[0])**2 + (P2[1] - P1[1])**2 })\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
      ]
     }
    ],
@@ -151,6 +147,8 @@
     "\n",
     "def mountain(P1, P2, roughness):\n",
     "    # Base case: if segment is too small, draw a line\n",
+    "    print(f\"P1 = {P1}- P2 = {P2}\")\n",
+    "    print(f\"{(P2[0] - P1[0])**2 + (P2[1] - P1[1])**2 }\")\n",
     "    if (P2[0] - P1[0])**2 + (P2[1] - P1[1])**2 < 1:\n",
     "        turtle.goto(P2)\n",
     "        return\n",
@@ -158,6 +156,7 @@
     "    # Calculate midpoint\n",
     "    mid_x = (P1[0] + P2[0]) / 2\n",
     "    mid_y = (P1[1] + P2[1]) / 2\n",
+    "    print(f\"{mid_x} - {mid_y}\")\n",
     "\n",
     "    # Apply random vertical displacement\n",
     "    displacement = random.uniform(-roughness, roughness)\n",
@@ -172,13 +171,13 @@
     "# Setup Turtle\n",
     "turtle.speed(0) # Fastest drawing speed\n",
     "turtle.penup()\n",
-    "turtle.goto(-500, 0) # Starting point of the mountain range\n",
+    "turtle.goto(-400, 0) # Starting point of the mountain range\n",
     "turtle.pendown()\n",
     "\n",
     "# Initial call to draw the mountain\n",
-    "start_point = (-400, 0)\n",
-    "end_point = (400, 0)\n",
-    "initial_roughness = 300 # Adjust for desired level of detail\n",
+    "start_point = (-5, 0)\n",
+    "end_point = (5, 0)\n",
+    "initial_roughness = 1 # Adjust for desired level of detail\n",
     "\n",
     "mountain(start_point, end_point, initial_roughness)\n",
     "\n",
