--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -126,11 +126,98 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (2299520625.py, line 14)",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P1 = (-5, 0)- P2 = (5, 0)\n",
+      "100\n",
+      "0.0 - 0.0\n",
+      "P1 = (-5, 0)- P2 = (0.0, -0.5222334896807823)\n",
+      "25.27272781774417\n",
+      "-2.5 - -0.26111674484039116\n",
+      "P1 = (-5, 0)- P2 = (-2.5, -0.6307747533425331)\n",
+      "6.647876789454333\n",
+      "-3.75 - -0.31538737667126654\n",
+      "P1 = (-5, 0)- P2 = (-3.75, -0.27505132021002143)\n",
+      "1.6381532287492757\n",
+      "-4.375 - -0.13752566010501072\n",
+      "P1 = (-5, 0)- P2 = (-4.375, -0.15603479032064893)\n",
+      "0.41497185579040885\n",
+      "P1 = (-4.375, -0.15603479032064893)- P2 = (-3.75, -0.27505132021002143)\n",
+      "0.4047899343869079\n",
+      "P1 = (-3.75, -0.27505132021002143)- P2 = (-2.5, -0.6307747533425331)\n",
+      "1.6890391608795805\n",
+      "-3.125 - -0.45291303677627726\n",
+      "P1 = (-3.75, -0.27505132021002143)- P2 = (-3.125, -0.427283705564933)\n",
+      "0.4137996991508463\n",
+      "P1 = (-3.125, -0.427283705564933)- P2 = (-2.5, -0.6307747533425331)\n",
+      "0.4320336065256255\n",
+      "P1 = (-2.5, -0.6307747533425331)- P2 = (0.0, -0.5222334896807823)\n",
+      "6.2617812059172895\n",
+      "-1.25 - -0.5765041215116578\n",
+      "P1 = (-2.5, -0.6307747533425331)- P2 = (-1.25, -0.4404325305436015)\n",
+      "1.598730161780038\n",
+      "-1.875 - -0.5356036419430673\n",
+      "P1 = (-2.5, -0.6307747533425331)- P2 = (-1.875, -0.5826561282528062)\n",
+      "0.3929404020805257\n",
+      "P1 = (-1.875, -0.5826561282528062)- P2 = (-1.25, -0.4404325305436015)\n",
+      "0.4108525517453497\n",
+      "P1 = (-1.25, -0.4404325305436015)- P2 = (0.0, -0.5222334896807823)\n",
+      "1.5691913969157627\n",
+      "-0.625 - -0.4813330101121919\n",
+      "P1 = (-1.25, -0.4404325305436015)- P2 = (-0.625, -0.39257050620604694)\n",
+      "0.39291577337368866\n",
+      "P1 = (-0.625, -0.39257050620604694)- P2 = (0.0, -0.5222334896807823)\n",
+      "0.4074374892835695\n",
+      "P1 = (0.0, -0.5222334896807823)- P2 = (5, 0)\n",
+      "25.27272781774417\n",
+      "2.5 - -0.26111674484039116\n",
+      "P1 = (0.0, -0.5222334896807823)- P2 = (2.5, -0.2362951893697245)\n",
+      "6.331760711584777\n",
+      "1.25 - -0.3792643395252534\n",
+      "P1 = (0.0, -0.5222334896807823)- P2 = (1.25, -0.3150540325331096)\n",
+      "1.6054233274640044\n",
+      "0.625 - -0.41864376110694596\n",
+      "P1 = (0.0, -0.5222334896807823)- P2 = (0.625, -0.5412827406972298)\n",
+      "0.39098787396428764\n",
+      "P1 = (0.625, -0.5412827406972298)- P2 = (1.25, -0.3150540325331096)\n",
+      "0.4418044283976067\n",
+      "P1 = (1.25, -0.3150540325331096)- P2 = (2.5, -0.2362951893697245)\n",
+      "1.5687029553764347\n",
+      "1.875 - -0.27567461095141704\n",
+      "P1 = (1.25, -0.3150540325331096)- P2 = (1.875, -0.2280064537626705)\n",
+      "0.3982022809697958\n",
+      "P1 = (1.875, -0.2280064537626705)- P2 = (2.5, -0.2362951893697245)\n",
+      "0.39069370313796364\n",
+      "P1 = (2.5, -0.2362951893697245)- P2 = (5, 0)\n",
+      "6.305835416519274\n",
+      "3.75 - -0.11814759468486224\n",
+      "P1 = (2.5, -0.2362951893697245)- P2 = (3.75, 0.10220294124208934)\n",
+      "1.6770809844276926\n",
+      "3.125 - -0.06704612406381757\n",
+      "P1 = (2.5, -0.2362951893697245)- P2 = (3.125, -0.18185071185631907)\n",
+      "0.3935892011317077\n",
+      "P1 = (3.125, -0.18185071185631907)- P2 = (3.75, 0.10220294124208934)\n",
+      "0.47131147783855093\n",
+      "P1 = (3.75, 0.10220294124208934)- P2 = (5, 0)\n",
+      "1.572945441198534\n",
+      "4.375 - 0.05110147062104467\n",
+      "P1 = (3.75, 0.10220294124208934)- P2 = (4.375, 0.17593858110235566)\n",
+      "0.3960619445856029\n",
+      "P1 = (4.375, 0.17593858110235566)- P2 = (5, 0)\n",
+      "0.42157938432031017\n"
+     ]
+    },
+    {
+     "ename": "Terminator",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[4], line 14\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f{(P2[0] - P1[0])**2 + (P2[1] - P1[1])**2 })\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTerminator\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 48\u001b[0m\n\u001b[1;32m     45\u001b[0m mountain(start_point, end_point, initial_roughness)\n\u001b[1;32m     47\u001b[0m turtle\u001b[38;5;241m.\u001b[39mdone()\n\u001b[0;32m---> 48\u001b[0m \u001b[43mturtle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexitonclick\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m<string>:5\u001b[0m, in \u001b[0;36mexitonclick\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mTerminator\u001b[0m: "
      ]
     }
    ],
@@ -177,7 +264,7 @@
     "# Initial call to draw the mountain\n",
     "start_point = (-5, 0)\n",
     "end_point = (5, 0)\n",
-    "initial_roughness = 1 # Adjust for desired level of detail\n",
+    "initial_roughness = 2 # Adjust for desired level of detail\n",
     "\n",
     "mountain(start_point, end_point, initial_roughness)\n",
     "\n",
