chore: experiment with the slope

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -122,108 +122,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "P1 = (-5, 0)- P2 = (5, 0)\n",
-      "100\n",
-      "0.0 - 0.0\n",
-      "P1 = (-5, 0)- P2 = (0.0, -1.381053437593982)\n",
-      "26.907308597490154\n",
-      "-2.5 - -0.690526718796991\n",
-      "P1 = (-5, 0)- P2 = (-2.5, -0.44202317310587214)\n",
-      "6.445384485562584\n",
-      "-3.75 - -0.22101158655293607\n",
-      "P1 = (-5, 0)- P2 = (-3.75, -0.013101095988547029)\n",
-      "1.562671638716101\n",
-      "-4.375 - -0.0065505479942735145\n",
-      "P1 = (-5, 0)- P2 = (-4.375, 0.05681734067817851)\n",
-      "0.3938532102017402\n",
-      "passed\n",
-      "P1 = (-4.375, 0.05681734067817851)- P2 = (-3.75, -0.013101095988547029)\n",
-      "0.3955135877859189\n",
-      "passed\n",
-      "P1 = (-3.75, -0.013101095988547029)- P2 = (-2.5, -0.44202317310587214)\n",
-      "1.7464741482386406\n",
-      "-3.125 - -0.22756213454720958\n",
-      "P1 = (-3.75, -0.013101095988547029)- P2 = (-3.125, -0.24789055516237402)\n",
-      "0.44575109013913816\n",
-      "passed\n",
-      "P1 = (-3.125, -0.24789055516237402)- P2 = (-2.5, -0.44202317310587214)\n",
-      "0.4283124733495962\n",
-      "passed\n",
-      "P1 = (-2.5, -0.44202317310587214)- P2 = (0.0, -1.381053437593982)\n",
-      "7.131777837624609\n",
-      "-1.25 - -0.9115383053499271\n",
-      "P1 = (-2.5, -0.44202317310587214)- P2 = (-1.25, -0.957707808030783)\n",
-      "1.8284306426976387\n",
-      "-1.875 - -0.6998654905683276\n",
-      "P1 = (-2.5, -0.44202317310587214)- P2 = (-1.875, -0.8175145453168722)\n",
-      "0.5316187706048998\n",
-      "passed\n",
-      "P1 = (-1.875, -0.8175145453168722)- P2 = (-1.25, -0.957707808030783)\n",
-      "0.41027915091037165\n",
-      "passed\n",
-      "P1 = (-1.25, -0.957707808030783)- P2 = (0.0, -1.381053437593982)\n",
-      "1.7417215220702613\n",
-      "-0.625 - -1.1693806228123824\n",
-      "P1 = (-1.25, -0.957707808030783)- P2 = (-0.625, -1.0195196719500215)\n",
-      "0.39444570652117045\n",
-      "passed\n",
-      "P1 = (-0.625, -1.0195196719500215)- P2 = (0.0, -1.381053437593982)\n",
-      "0.5213316637007022\n",
-      "passed\n",
-      "P1 = (0.0, -1.381053437593982)- P2 = (5, 0)\n",
-      "26.907308597490154\n",
-      "2.5 - -0.690526718796991\n",
-      "P1 = (0.0, -1.381053437593982)- P2 = (2.5, -0.6887527623474352)\n",
-      "6.729280224946825\n",
-      "1.25 - -1.0349030999707085\n",
-      "P1 = (0.0, -1.381053437593982)- P2 = (1.25, -0.6847108528067586)\n",
-      "2.0473929953881513\n",
-      "0.625 - -1.0328821452003702\n",
-      "P1 = (0.0, -1.381053437593982)- P2 = (0.625, -1.248686895713167)\n",
-      "0.4081459014094856\n",
-      "passed\n",
-      "P1 = (0.625, -1.248686895713167)- P2 = (1.25, -0.6847108528067586)\n",
-      "0.708693976972371\n",
-      "passed\n",
-      "P1 = (1.25, -0.6847108528067586)- P2 = (2.5, -0.6887527623474352)\n",
-      "1.562516337032735\n",
-      "1.875 - -0.686731807577097\n",
-      "P1 = (1.25, -0.6847108528067586)- P2 = (1.875, -0.9092833645006636)\n",
-      "0.4410578130085091\n",
-      "passed\n",
-      "P1 = (1.875, -0.9092833645006636)- P2 = (2.5, -0.6887527623474352)\n",
-      "0.4392587464860655\n",
-      "passed\n",
-      "P1 = (2.5, -0.6887527623474352)- P2 = (5, 0)\n",
-      "6.724380367641222\n",
-      "3.75 - -0.3443763811737176\n",
-      "P1 = (2.5, -0.6887527623474352)- P2 = (3.75, 0.042225706409726116)\n",
-      "2.0968295217865642\n",
-      "3.125 - -0.32326352796885455\n",
-      "P1 = (2.5, -0.6887527623474352)- P2 = (3.125, -0.14259097251423214)\n",
-      "0.6889177006738079\n",
-      "passed\n",
-      "P1 = (3.125, -0.14259097251423214)- P2 = (3.75, 0.042225706409726116)\n",
-      "0.4247822048084815\n",
-      "passed\n",
-      "P1 = (3.75, 0.042225706409726116)- P2 = (5, 0)\n",
-      "1.5642830102818004\n",
-      "4.375 - 0.021112853204863058\n",
-      "P1 = (3.75, 0.042225706409726116)- P2 = (4.375, -0.2278888358823749)\n",
-      "0.46358686595767123\n",
-      "passed\n",
-      "P1 = (4.375, -0.2278888358823749)- P2 = (5, 0)\n",
-      "0.442558321519824\n",
-      "passed\n"
-     ]
-    },
     {
      "ename": "Terminator",
      "evalue": "",
@@ -231,7 +132,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTerminator\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 49\u001b[0m\n\u001b[1;32m     46\u001b[0m mountain(start_point, end_point, initial_roughness)\n\u001b[1;32m     48\u001b[0m turtle\u001b[38;5;241m.\u001b[39mdone()\n\u001b[0;32m---> 49\u001b[0m \u001b[43mturtle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexitonclick\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[3], line 49\u001b[0m\n\u001b[1;32m     46\u001b[0m mountain(start_point, end_point, initial_roughness)\n\u001b[1;32m     48\u001b[0m turtle\u001b[38;5;241m.\u001b[39mdone()\n\u001b[0;32m---> 49\u001b[0m \u001b[43mturtle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexitonclick\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m<string>:5\u001b[0m, in \u001b[0;36mexitonclick\u001b[0;34m()\u001b[0m\n",
       "\u001b[0;31mTerminator\u001b[0m: "
      ]
@@ -250,17 +151,17 @@
     "\n",
     "def mountain(P1, P2, roughness):\n",
     "    # Base case: if segment is too small, draw a line\n",
-    "    print(f\"P1 = {P1}- P2 = {P2}\")\n",
-    "    print(f\"{(P2[0] - P1[0])**2 + (P2[1] - P1[1])**2 }\")\n",
-    "    if (P2[0] - P1[0])**2 + (P2[1] - P1[1])**2 < 1:\n",
-    "        print(\"passed\")\n",
+    "    # print(f\"P1 = {P1}- P2 = {P2}\")\n",
+    "    # print(f\"{(P2[0] - P1[0])**2 + (P2[1] - P1[1])**2 }\")\n",
+    "    if (P2[0] - P1[0])**2 + (P2[1] - P1[1])**2 < 2:\n",
+    "     #   print(\"passed\")\n",
     "        turtle.goto(P2)\n",
     "        return\n",
     "\n",
     "    # Calculate midpoint\n",
     "    mid_x = (P1[0] + P2[0]) / 2\n",
     "    mid_y = (P1[1] + P2[1]) / 2\n",
-    "    print(f\"{mid_x} - {mid_y}\")\n",
+    "    #print(f\"{mid_x} - {mid_y}\")\n",
     "\n",
     "    # Apply random vertical displacement\n",
     "    displacement = random.uniform(-roughness, roughness)\n",
@@ -275,13 +176,13 @@
     "# Setup Turtle\n",
     "turtle.speed(0) # Fastest drawing speed\n",
     "turtle.penup()\n",
-    "turtle.goto(-400, 0) # Starting point of the mountain range\n",
+    "turtle.goto(-500, 0) # Starting point of the mountain range\n",
     "turtle.pendown()\n",
     "\n",
     "# Initial call to draw the mountain\n",
-    "start_point = (-5, 0)\n",
-    "end_point = (5, 0)\n",
-    "initial_roughness = 2 # Adjust for desired level of detail\n",
+    "start_point = (-400, 0)\n",
+    "end_point = (400, 0)\n",
+    "initial_roughness = 100 # Adjust for desired level of detail\n",
     "\n",
     "mountain(start_point, end_point, initial_roughness)\n",
     "\n",
