feat: solve the exercise 8

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -429,6 +429,52 @@
     "8. Using the turtle graphics module, write a recursive program to display a Koch snowflake.\n",
     "\"\"\"\n",
     "# TODO: Not yet done\n"
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import turtle\n",
+    "\n",
+    "def koch_curve(t, length, order):\n",
+    "    \"\"\"Draws a Koch curve segment.\"\"\"\n",
+    "    if order == 0:\n",
+    "        t.forward(length)\n",
+    "    else:\n",
+    "        length /= 3.0\n",
+    "        koch_curve(t, length, order - 1)\n",
+    "        t.left(60)\n",
+    "        koch_curve(t, length, order - 1)\n",
+    "        t.right(120)\n",
+    "        koch_curve(t, length, order - 1)\n",
+    "        t.left(60)\n",
+    "        koch_curve(t, length, order - 1)\n",
+    "\n",
+    "def draw_koch_snowflake(t, length, order):\n",
+    "    \"\"\"Draws a Koch snowflake.\"\"\"\n",
+    "    for _ in range(3):\n",
+    "        koch_curve(t, length, order)\n",
+    "        t.right(120)\n",
+    "\n",
+    "# Set up the turtle and screen\n",
+    "screen = turtle.Screen()\n",
+    "screen.setup(width=800, height=800)\n",
+    "screen.tracer(True)  # Turn off screen updates for faster drawing\n",
+    "\n",
+    "t = turtle.Turtle()\n",
+    "t.speed(0)  # Fastest speed\n",
+    "t.penup()\n",
+    "t.goto(-150, 90)  # Adjust starting position\n",
+    "t.pendown()\n",
+    "\n",
+    "# Draw the Koch snowflake\n",
+    "initial_length = 300\n",
+    "recursion_order = 0  # Adjust for desired detail level\n",
+    "draw_koch_snowflake(t, initial_length, recursion_order)\n",
+    "\n",
+    "#screen.update()  # Update the screen to show the drawing\n",
+    "screen.exitonclick() # Keep the window open until clicked"
    ]
   },
   {
