chore: add initial trials of drawing the triangles

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -421,14 +421,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
     "8. Using the turtle graphics module, write a recursive program to display a Koch snowflake.\n",
     "\"\"\"\n",
-    "# TODO: Not yet done\n"
+    "# TODO: Not yet done\n",
+    "import turtle\n",
+    "\n",
+    "t = turtle.Turtle()\n",
+    "myWin = turtle.Screen()\n",
+    "t.penup()\n",
+    "t.goto(-90, -60)\n",
+    "t.pendown()\n",
+    "length = 180\n",
+    "for _ in range(3):\n",
+    "    t.forward(length)\n",
+    "    t.right(120)\n",
+    "   # t.left(60)\n",
+    "   # t.forward(length/3)\n",
+    "   # t.right(120)\n",
+    "   # t.forward(length/3)\n",
+    "   # t.left(60)\n",
+    "   # t.forward(length/3)\n",
+    "myWin.exitonclick()"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": 1,
