feat: add a variant of the koch snowflakes exercises

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -455,6 +455,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "8.1 using the turtle graphics module, write a recursive program to display a Koch snowflake horizontally\n",
+    "\"\"\"\n",
+    "\n",
+    "import turtle\n",
+    "\n",
+    "t = turtle.Turtle()\n",
+    "\n",
+    "myWin = turtle.Screen()\n",
+    "\n",
+    "t.penup()\n",
+    "\n",
+    "t.goto(-90, 0)\n",
+    "t.pendown()\n",
+    "length = 180\n",
+    "def koch_horinzotal(length, order):\n",
+    "    \"\"\"Draws a segment\"\"\"\n",
+    "myWin.exitonclick"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": 1,
