chore: initial trials to recurse

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -470,9 +470,21 @@
     "t.goto(-90, 0)\n",
     "t.pendown()\n",
     "length = 180\n",
-    "def koch_horinzotal(length, order):\n",
+    "def draw_koch_horinzotal(t, length, order):\n",
     "    \"\"\"Draws a segment\"\"\"\n",
-    "myWin.exitonclick"
+    "    for i in [60, -120, 60, 0]:\n",
+    "        t.forward(length)\n",
+    "        t.left(i)\n",
+    "\n",
+    "def koch_horinzotal(t, length, order):\n",
+    "    if order > 0:\n",
+    "        length /=3.0\n",
+    "        koch_horinzotal(t, length, order=-1)\n",
+    "        draw_koch_horinzotal(t, length, order)\n",
+    "    else:\n",
+    "        t.forward(length)\n",
+    "koch_horinzotal(t, length, 3)\n",
+    "myWin.exitonclick()"
    ]
   },
   {
