chore: experiment with the knochflake

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -470,19 +470,14 @@
     "t.goto(-90, 0)\n",
     "t.pendown()\n",
     "length = 180\n",
-    "def draw_koch_horinzotal(t, length, order):\n",
-    "    \"\"\"Draws a segment\"\"\"\n",
-    "    for i in [60, -120, 60, 0]:\n",
-    "        t.forward(length)\n",
-    "        t.left(i)\n",
-    "\n",
     "def koch_horinzotal(t, length, order):\n",
     "    if order > 0:\n",
-    "        length /=3.0\n",
-    "        koch_horinzotal(t, length, order=-1)\n",
-    "        draw_koch_horinzotal(t, length, order)\n",
+    "        for i in [60, -120, 60, 0]:\n",
+    "            koch_horinzotal(t, length/3, order-1)\n",
+    "            t.left(i)\n",
     "    else:\n",
     "        t.forward(length)\n",
+    "\n",
     "koch_horinzotal(t, length, 3)\n",
     "myWin.exitonclick()"
    ]
