feat: experiment with rudimentary rendering for tower of hanoi

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4127,6 +4127,80 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Experiment with draw tower \n",
+    "\n",
+    "import turtle\n",
+    "t = turtle.Turtle()\n",
+    "\n",
+    "myWin = turtle.Screen()\n",
+    "\n",
+    "t.penup()\n",
+    "\n",
+    "t.goto(-90, 0)\n",
+    "t.pendown()\n",
+    "length = 200\n",
+    "padding = 5 \n",
+    "t.speed(1)\n",
+    "class tower:\n",
+    "    def __init__(self, t, x, y, length):\n",
+    "        self.t = t\n",
+    "        self.x_axis = x\n",
+    "        self.y_axis = y\n",
+    "        self.length = length\n",
+    "\n",
+    "    def draw(self):\n",
+    "        t.penup()\n",
+    "        t.goto(self.x_axis, self.y_axis)\n",
+    "        t.pensize(2)\n",
+    "        t.pencolor(\"blue\")\n",
+    "        t.pendown()\n",
+    "        t.left(90)\n",
+    "        t.forward(self.length)\n",
+    "        t.right(90)\n",
+    "    \n",
+    "    def draw_tile(self, length_of_tile, pad):\n",
+    "        tile_x_axis = self.x_axis - length_of_tile/2\n",
+    "        tile_y_axis = self.y_axis + pad\n",
+    "        t.penup()\n",
+    "        t.goto(tile_x_axis,tile_y_axis)\n",
+    "        t.pensize(4)\n",
+    "        t.pencolor(\"brown\")\n",
+    "        t.pendown()\n",
+    "        t.left(0)\n",
+    "        t.forward(length_of_tile)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "t1 = tower(t, -100, 0, length)\n",
+    "t2 = tower(t, 0, 0, length)\n",
+    "t3 = tower(t, 100, 0, length)\n",
+    "\n",
+    "t1.draw()\n",
+    "t2.draw()\n",
+    "t3.draw()\n",
+    "\n",
+    "#t1.draw_big_tile()\n",
+    "#t1.draw_medium_tile()\n",
+    "#t1.draw_small_tile()\n",
+    "\n",
+    "#t2.draw_big_tile()\n",
+    "#t2.draw_medium_tile()\n",
+    "#t2.draw_small_tile()\n",
+    "\n",
+    "t3.draw_tile(100, padding)\n",
+    "t3.draw_tile(80, padding + 20)\n",
+    "t3.draw_tile(60, padding + 40)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\"\"\"\n",
     "\n",
     "\"\"\"\n",
