feat: solve the exercise number 8

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -428,7 +428,6 @@
     "\"\"\"\n",
     "8. Using the turtle graphics module, write a recursive program to display a Koch snowflake.\n",
     "\"\"\"\n",
-    "# TODO: Not yet done\n",
     "import turtle\n",
     "\n",
     "t = turtle.Turtle()\n",
@@ -437,21 +436,26 @@
     "t.goto(-90, -60)\n",
     "t.pendown()\n",
     "length = 180\n",
-    "for _ in range(3):\n",
-    "    t.forward(length)\n",
-    "    t.right(120)\n",
-    "   # t.left(60)\n",
-    "   # t.forward(length/3)\n",
-    "   # t.right(120)\n",
-    "   # t.forward(length/3)\n",
-    "   # t.left(60)\n",
-    "   # t.forward(length/3)\n",
+    "def k_horizontal(t, length, order):\n",
+    "    if order > 0:\n",
+    "        for i in [60, -120, 60, 0]:\n",
+    "            k_horizontal(t, length/3, order-1)\n",
+    "            t.left(i)\n",
+    "    else:\n",
+    "        t.forward(length)\n",
+    "\n",
+    "def draw_it(t, length, order):\n",
+    "    for _ in range(3):\n",
+    "        k_horizontal(t, length, order)\n",
+    "        t.left(-120)\n",
+    "\n",
+    "draw_it(t, 180, 3)\n",
     "myWin.exitonclick()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
