chore: merge two ideas for GUI tower of hanoi

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4084,9 +4084,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "to be moved disks  from A = [3, 2, 1] to C = []\n",
+      "Moving 1 from A to C\n",
+      "Moving 2 from A to B\n",
+      "Moving 1 from C to B\n",
+      "Moving 3 from A to C\n",
+      "Moving 1 from B to A\n",
+      "Moving 2 from B to C\n",
+      "Moving 1 from A to C\n",
+      "moved disks from A = [] to C = [3, 2, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "12.Modify the Tower of Hanoi program using turtle graphics to animate the movement of the disks. Hint: You can make multiple turtles and have them shaped like rectangles.\n",
